# RaycastGL

./: CMakeLists.txt  LICENSE  README.md
lib/glad/: glad.c
lib/glad/include/: glad.h
src/: camera.cpp  main.cpp  shader.cpp
src/headers/: camera.h  shader.h
src/shaders/: fShader.glsl  vShader.glsl
